# article_analyzer

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
src/article_analyzer/: __main__.py
src/article_analyzer/domain/database/: settings.py
src/article_analyzer/domain/settings/: __init__.py  main_settings.py  v1_settings.py
src/article_analyzer/domain/user/interfaces/: __init__.py
src/article_analyzer/domain/user/types/: __init__.py  creation.py  identity.py
src/article_analyzer/infrastructure/: settings_loader.py
src/article_analyzer/infrastructure/database/: __init__.py  factory.py  gateway.py  settings.py
src/article_analyzer/infrastructure/database/core/: __init__.py  connection.py  manager.py
src/article_analyzer/infrastructure/database/models/: user.py
src/article_analyzer/infrastructure/database/repositories/: base.py  crud.py  user.py
src/article_analyzer/infrastructure/dependency_injection/: __init__.py  ioc.py  providers.py  setup.py
src/article_analyzer/infrastructure/dependency_injection/containers/: container.py
src/article_analyzer/infrastructure/dependency_injection/providers/: __init__.py  main_provider.py  v1_provider.py
src/article_analyzer/presentation/api/: settings.py  setup.py
src/certification_portal/: __main__.py
src/certification_portal/infrastructure/: settings_loader.py
src/certification_portal/infrastructure/database/: gateway.py
src/certification_portal/infrastructure/dependency_injection/: ioc.py  setup.py
src/certification_portal/presentation/api/: settings.py  setup.py
(+27 files in other folders)
